testsuite/poke.pkl/integers-diag-2.pk
/* { dg-do compile } */

var i = 0xffffffffffffffff; /*  { dg-error "overflow.*\n.*try" } */
